--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   },
   "dependencies": {
     "aws-amplify": "^3.3.17",
+    "autoprefixer": "9.8.6",
+    "postcss": "^8.1.8",
+    "tailwindcss": "^2.0.2",
     "vue": "^3.0.5"
   },
   "devDependencies": {
